# cppembedder

./: Cargo.toml  README.md
src/: chunking.rs  embedding.rs  embedding_common.rs  importer.rs  lib.rs  main.rs
