[package]
name = "cppembedder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive", "env"] }
fastembed = "4.6.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
indicatif = "0.17.8"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "query"
path = "src/bin/query.rs"
